fixes extension issue

--- a/index.html
+++ b/index.html
@@ -3147,6 +3147,8 @@ return!"\t\n\x0B\f\r                　\u2028\u2029
   <li><a href="#trouble-creating-graph-for-stimulus-timing." id="toc-trouble-creating-graph-for-stimulus-timing." class="nav-link" data-scroll-target="#trouble-creating-graph-for-stimulus-timing.">Trouble creating graph for stimulus timing.</a></li>
   <li><a href="#the-guidance-says-houses-not-objects" id="toc-the-guidance-says-houses-not-objects" class="nav-link" data-scroll-target="#the-guidance-says-houses-not-objects">The guidance says “houses” not “objects”…</a></li>
   <li><a href="#significant-difference-from-0-and-should-we-report-r2" id="toc-significant-difference-from-0-and-should-we-report-r2" class="nav-link" data-scroll-target="#significant-difference-from-0-and-should-we-report-r2">Significant difference from 0? And should we report <span class="math inline">\(r^2\)</span>?</a></li>
+  <li><a href="#do-we-need-to-do-an-f-test" id="toc-do-we-need-to-do-an-f-test" class="nav-link" data-scroll-target="#do-we-need-to-do-an-f-test">Do we need to do an <span class="math inline">\(F\)</span> test?</a></li>
+  <li><a href="#how-to-report-stats-apa-format" id="toc-how-to-report-stats-apa-format" class="nav-link" data-scroll-target="#how-to-report-stats-apa-format">How to report stats (APA format)??</a></li>
   </ul>
 </nav>
 </div>
@@ -3263,11 +3265,11 @@ return!"\t\n\x0B\f\r                　\u2028\u2029
 </details>
 <div class="cell-output-display">
 
-<div id="cdmxtudqax" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="gavfypwsad" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
-:where(#cdmxtudqax) .gt_table {
+:where(#gavfypwsad) .gt_table {
 display: table;
 border-collapse: collapse;
 margin-left: auto;
@@ -3291,7 +3293,7 @@ border-left-style: none;
 border-left-width: 2px;
 border-left-color: #D3D3D3;
 }
-:where(#cdmxtudqax) .gt_heading {
+:where(#gavfypwsad) .gt_heading {
 background-color: #FFFFFF;
 text-align: center;
 border-bottom-color: #FFFFFF;
@@ -3302,11 +3304,11 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-:where(#cdmxtudqax) .gt_caption {
+:where(#gavfypwsad) .gt_caption {
 padding-top: 4px;
 padding-bottom: 4px;
 }
-:where(#cdmxtudqax) .gt_title {
+:where(#gavfypwsad) .gt_title {
 color: #333333;
 font-size: 125%;
 font-weight: initial;
@@ -3317,7 +3319,7 @@ padding-right: 5px;
 border-bottom-color: #FFFFFF;
 border-bottom-width: 0;
 }
-:where(#cdmxtudqax) .gt_subtitle {
+:where(#gavfypwsad) .gt_subtitle {
 color: #333333;
 font-size: 85%;
 font-weight: initial;
@@ -3328,12 +3330,12 @@ padding-right: 5px;
 border-top-color: #FFFFFF;
 border-top-width: 0;
 }
-:where(#cdmxtudqax) .gt_bottom_border {
+:where(#gavfypwsad) .gt_bottom_border {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-:where(#cdmxtudqax) .gt_col_headings {
+:where(#gavfypwsad) .gt_col_headings {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -3347,7 +3349,7 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-:where(#cdmxtudqax) .gt_col_heading {
+:where(#gavfypwsad) .gt_col_heading {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3366,7 +3368,7 @@ padding-left: 5px;
 padding-right: 5px;
 overflow-x: hidden;
 }
-:where(#cdmxtudqax) .gt_column_spanner_outer {
+:where(#gavfypwsad) .gt_column_spanner_outer {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3377,13 +3379,13 @@ padding-bottom: 0;
 padding-left: 4px;
 padding-right: 4px;
 }
-:where(#cdmxtudqax) .gt_column_spanner_outer:first-child {
+:where(#gavfypwsad) .gt_column_spanner_outer:first-child {
 padding-left: 0;
 }
-:where(#cdmxtudqax) .gt_column_spanner_outer:last-child {
+:where(#gavfypwsad) .gt_column_spanner_outer:last-child {
 padding-right: 0;
 }
-:where(#cdmxtudqax) .gt_column_spanner {
+:where(#gavfypwsad) .gt_column_spanner {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
@@ -3394,7 +3396,7 @@ overflow-x: hidden;
 display: inline-block;
 width: 100%;
 }
-:where(#cdmxtudqax) .gt_group_heading {
+:where(#gavfypwsad) .gt_group_heading {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3419,7 +3421,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 text-align: left;
 }
-:where(#cdmxtudqax) .gt_empty_group_heading {
+:where(#gavfypwsad) .gt_empty_group_heading {
 padding: 0.5px;
 color: #333333;
 background-color: #FFFFFF;
@@ -3433,13 +3435,13 @@ border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 vertical-align: middle;
 }
-:where(#cdmxtudqax) .gt_from_md > :first-child {
+:where(#gavfypwsad) .gt_from_md > :first-child {
 margin-top: 0;
 }
-:where(#cdmxtudqax) .gt_from_md > :last-child {
+:where(#gavfypwsad) .gt_from_md > :last-child {
 margin-bottom: 0;
 }
-:where(#cdmxtudqax) .gt_row {
+:where(#gavfypwsad) .gt_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3457,7 +3459,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 overflow-x: hidden;
 }
-:where(#cdmxtudqax) .gt_stub {
+:where(#gavfypwsad) .gt_stub {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3469,7 +3471,7 @@ border-right-color: #D3D3D3;
 padding-left: 5px;
 padding-right: 5px;
 }
-:where(#cdmxtudqax) .gt_stub_row_group {
+:where(#gavfypwsad) .gt_stub_row_group {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3482,10 +3484,10 @@ padding-left: 5px;
 padding-right: 5px;
 vertical-align: top;
 }
-:where(#cdmxtudqax) .gt_row_group_first td {
+:where(#gavfypwsad) .gt_row_group_first td {
 border-top-width: 2px;
 }
-:where(#cdmxtudqax) .gt_summary_row {
+:where(#gavfypwsad) .gt_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -3494,14 +3496,14 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-:where(#cdmxtudqax) .gt_first_summary_row {
+:where(#gavfypwsad) .gt_first_summary_row {
 border-top-style: solid;
 border-top-color: #D3D3D3;
 }
-:where(#cdmxtudqax) .gt_first_summary_row.thick {
+:where(#gavfypwsad) .gt_first_summary_row.thick {
 border-top-width: 2px;
 }
-:where(#cdmxtudqax) .gt_last_summary_row {
+:where(#gavfypwsad) .gt_last_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3510,7 +3512,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-:where(#cdmxtudqax) .gt_grand_summary_row {
+:where(#gavfypwsad) .gt_grand_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -3519,7 +3521,7 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-:where(#cdmxtudqax) .gt_first_grand_summary_row {
+:where(#gavfypwsad) .gt_first_grand_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3528,10 +3530,10 @@ border-top-style: double;
 border-top-width: 6px;
 border-top-color: #D3D3D3;
 }
-:where(#cdmxtudqax) .gt_striped {
+:where(#gavfypwsad) .gt_striped {
 background-color: rgba(128, 128, 128, 0.05);
 }
-:where(#cdmxtudqax) .gt_table_body {
+:where(#gavfypwsad) .gt_table_body {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -3539,7 +3541,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-:where(#cdmxtudqax) .gt_footnotes {
+:where(#gavfypwsad) .gt_footnotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -3552,7 +3554,7 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-:where(#cdmxtudqax) .gt_footnote {
+:where(#gavfypwsad) .gt_footnote {
 margin: 0px;
 font-size: 90%;
 padding-left: 4px;
@@ -3560,7 +3562,7 @@ padding-right: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-:where(#cdmxtudqax) .gt_sourcenotes {
+:where(#gavfypwsad) .gt_sourcenotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -3573,58 +3575,58 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-:where(#cdmxtudqax) .gt_sourcenote {
+:where(#gavfypwsad) .gt_sourcenote {
 font-size: 90%;
 padding-top: 4px;
 padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-:where(#cdmxtudqax) .gt_left {
+:where(#gavfypwsad) .gt_left {
 text-align: left;
 }
-:where(#cdmxtudqax) .gt_center {
+:where(#gavfypwsad) .gt_center {
 text-align: center;
 }
-:where(#cdmxtudqax) .gt_right {
+:where(#gavfypwsad) .gt_right {
 text-align: right;
 font-variant-numeric: tabular-nums;
 }
-:where(#cdmxtudqax) .gt_font_normal {
+:where(#gavfypwsad) .gt_font_normal {
 font-weight: normal;
 }
-:where(#cdmxtudqax) .gt_font_bold {
+:where(#gavfypwsad) .gt_font_bold {
 font-weight: bold;
 }
-:where(#cdmxtudqax) .gt_font_italic {
+:where(#gavfypwsad) .gt_font_italic {
 font-style: italic;
 }
-:where(#cdmxtudqax) .gt_super {
+:where(#gavfypwsad) .gt_super {
 font-size: 65%;
 }
-:where(#cdmxtudqax) .gt_footnote_marks {
+:where(#gavfypwsad) .gt_footnote_marks {
 font-style: italic;
 font-weight: normal;
 font-size: 75%;
 vertical-align: 0.4em;
 }
-:where(#cdmxtudqax) .gt_asterisk {
+:where(#gavfypwsad) .gt_asterisk {
 font-size: 100%;
 vertical-align: 0;
 }
-:where(#cdmxtudqax) .gt_indent_1 {
+:where(#gavfypwsad) .gt_indent_1 {
 text-indent: 5px;
 }
-:where(#cdmxtudqax) .gt_indent_2 {
+:where(#gavfypwsad) .gt_indent_2 {
 text-indent: 10px;
 }
-:where(#cdmxtudqax) .gt_indent_3 {
+:where(#gavfypwsad) .gt_indent_3 {
 text-indent: 15px;
 }
-:where(#cdmxtudqax) .gt_indent_4 {
+:where(#gavfypwsad) .gt_indent_4 {
 text-indent: 20px;
 }
-:where(#cdmxtudqax) .gt_indent_5 {
+:where(#gavfypwsad) .gt_indent_5 {
 text-indent: 25px;
 }
 </style>
@@ -3707,6 +3709,25 @@ t=\frac{\text{weight}}{\text{standard error}}
 <p>Should we report this as a regression with R2 … ?</p>
 </blockquote>
 <p>The assessment of whether linear regression does a good job of explaining the data is a separate question (but you get that information from the <code>LINEST()</code> function results from Excel). In that context, <span class="math inline">\(r^2\)</span>, the coefficient of determination, tells you the following. How well does linear regression with the two explanatory variables we have included in our model explain the data. And here <span class="math inline">\(r^2\)</span> can tell you the proportion of variance in the data explained by the model…. more simply: how much of the data is captured by the model? E.g. <span class="math inline">\(r^2=0.45\)</span> means that 45% of the variance in the data is explained.</p>
+</section>
+<section id="do-we-need-to-do-an-f-test" class="level2">
+<h2 class="anchored" data-anchor-id="do-we-need-to-do-an-f-test">Do we need to do an <span class="math inline">\(F\)</span> test?</h2>
+<p>No. There are some statistics reported by Excel’s <code>LINEST()</code> function that allow you to do an <span class="math inline">\(F\)</span> test on overall goodness of fit for the model. But we didn’t cover this in class, and I don’t expect any of this in the lab report.</p>
+</section>
+<section id="how-to-report-stats-apa-format" class="level2">
+<h2 class="anchored" data-anchor-id="how-to-report-stats-apa-format">How to report stats (APA format)??</h2>
+<blockquote class="blockquote">
+<p>[It’s hard] to write up my results section so it fits the APA format and isn’t confusing. Are there any resources to report each stat correctly?</p>
+</blockquote>
+<p>I am not going to mark papers based on the details of the APA style, although some of the principles expressed in that style guide are good.</p>
+<p>Have a look at this <a href="https://apastyle.apa.org/instructional-aids/numbers-statistics-guide.pdf">PDF instructional version relating to numbers/stats</a> for inspiration and details.</p>
+<p>Key ideas are:</p>
+<ul>
+<li><p>(for me) treat the APA style guide as a <strong>guide / set of suggestions</strong> for what to do and think about the <strong>principles behind</strong> the suggestions. You won’t get marked down on tiny details</p></li>
+<li><p>can the reader reconstruct/understand what you did?</p></li>
+<li><p>is the presentation unambiguous?</p></li>
+<li><p>there is more than one way to be correct / write a good results section.</p></li>
+</ul>
 </section>
 
 </main>
